--- a/main.css
+++ b/main.css
@@ -31,6 +31,38 @@
     text-decoration: none;
 }
 
+.topnav {
+    width: 50%;
+    height: 5vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.topnav #myLinks {
+    display: none;
+}
+
+.topnav a {
+    color: black;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+
+.topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
 .slide {
     margin: 0 auto;
     background: url(https://premiumlayers.com/html/sprint/images/slides/slide-1.jpg);
@@ -44,6 +76,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+    z-index: 1;
 }
 
 .slide .dd {
@@ -370,18 +404,28 @@
 
 @media only screen and (max-width: 575px) {
     .mucluc {
-        width: 100%;
+        width: 90%;
+    }
+    .mucluc ul {
+        display: none;
     }
     .slide .dd p {
         font-size: 7px;
     }
     .slide .dd h1 {
-        font-size: 20px;
+        font-size: 15px;
+    }
+    .about .p1 {
+        width: 100%;
     }
     .about .p2 {
         display: block;
+        width: 90%;
     }
     .about .p2 div {
+        width: 100%;
+    }
+    .whychoose {
         width: 100%;
     }
     .whychoose .a {
@@ -396,6 +440,12 @@
     }
     .whychoose .anh .b {
         height: 20%;
+        width: 100%;
+    }
+    .contact .c {
+        width: 100%;
+    }
+    .contact .d {
         width: 100%;
     }
     .contact .d .d1 {
@@ -434,6 +484,9 @@
 @media only screen and (min-width: 576px) and (max-width: 767px) {
     .mucluc {
         width: 100%;
+    }
+    .mucluc .topnav {
+        display: none;
     }
     .slide .dd p {
         font-size: 10px;
@@ -498,8 +551,11 @@
     .mucluc {
         width: 95%;
     }
+    .mucluc .topnav {
+        display: none;
+    }
     .slide .dd h1 {
-        font-size: 40px;
+        font-size: 30px;
     }
     .about .p2 {
         display: block;
@@ -545,6 +601,9 @@
     .mucluc {
         width: 74%;
     }
+    .mucluc .topnav {
+        display: none;
+    }
     .whychoose .a {
         width: 100%;
         left: 0;
@@ -579,6 +638,9 @@
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
     .mucluc {
         width: 61%;
+    }
+    .mucluc .topnav {
+        display: none;
     }
     .whychoose {
         margin-bottom: 100px;
